--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
       Mobile menu content goes here.
     </div>
 
+    <main>
+      <h1>Properties</h1>
+      <div id="contentDiv"></div>
+    </main>
+
+    <footer>Copyright 2024 Airbnb</footer>
+
     <script src="js/main.js"></script>
     <script src="js/filter-exercises.js"></script>
   </body>
