--- a/index.html
+++ b/index.html
@@ -97,7 +97,21 @@
     </div>
 
     <main>
-      <h1>Properties</h1>
+      <h1 class="heading heading--1">Page title</h1>
+      <h2 class="heading heading--2">Section title</h2>
+      <h3 class="heading heading--3">Item title</h3>
+      <h4 class="heading heading--4">Heading 4</h4>
+      <h5 class="heading heading--5">Heading 5</h5>
+      <h6 class="heading heading--6">Heading 6</h6>
+
+      <a class="btn" href="">Default button</a>
+      <a class="btn btn--primary" href="">Primary button</a>
+      <a class="btn btn--secondary" href="">Secondary button</a>
+      <a class="btn btn--delete" href="">Delete button</a>
+      <a class="btn btn--primary btn--small" href="">Small primary button</a>
+      <a class="btn btn--secondary btn--small" href=""
+        >Small secondary button</a
+      >
       <div id="contentDiv"></div>
     </main>
 
